# src/main/java/com/dcc604/clinica/modelos/Funcionario.java
@@ -16,5 +16,5 @@ public abstract class Funcionario extends EntidadeBase {
     protected String nome;
     protected String cpf;
     protected BigDecimal salario;
-    protected String fucao;
+    protected String funcao;
 }
